[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/art/main-bg.png" type="Texture" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Sq.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 602.936, 9.52008 )
texture = ExtResource( 2 )

[node name="sqMovePoints" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="kitchen" type="Node2D" parent="sqMovePoints"]
position = Vector2( 701.503, 84.1803 )

[node name="bathroom" type="Node2D" parent="sqMovePoints"]
position = Vector2( -187.787, -345.355 )

[node name="hallway" type="Node2D" parent="sqMovePoints"]
position = Vector2( -118.716, 416.585 )

[node name="livingRoom" type="Node2D" parent="sqMovePoints"]
position = Vector2( 1394.37, 407.951 )

[node name="bedroom" type="Node2D" parent="sqMovePoints"]
position = Vector2( 1461.28, -403.634 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 593.579, 414.426 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = -419
limit_top = -588
limit_right = 1624
limit_bottom = 600

[node name="Sq" parent="." instance=ExtResource( 4 )]
position = Vector2( 774.891, 425.219 )

[connection signal="room_coords" from="." to="Sq" method="_on_Main_room_coords"]
[connection signal="give_apple" from="Player" to="Sq" method="_on_Player_give_apple"]
[connection signal="player_action_near_sq" from="Player" to="Sq" method="_on_Player_player_action_near_sq"]
[connection signal="rescue" from="Player" to="Sq" method="_on_Player_rescue"]
[connection signal="area_entered" from="Sq" to="Player" method="_on_Sq_area_entered"]
[connection signal="area_exited" from="Sq" to="Player" method="_on_Sq_area_exited"]
